<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".FourActivity"
    android:background="@color/shenlanse"
    >


    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/shenhuise"
        android:hint="@string/edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="16dp"
        android:textSize="50dp"
        android:gravity="center"
        style="@style/EditText"
        />
    <EditText
        android:id="@+id/operation_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="35dp"
        android:gravity="right"
        android:layout_below="@id/number_edit_text"
        android:hint="输入操作..."
        android:textColorHint="#FFFFFF"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_one"
                style="@style/CalculatorButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_one"
                android:textSize="38dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_two"
                style="@style/CalculatorButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_two"
                android:textSize="38dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_three"
                style="@style/CalculatorButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_three"
                android:textSize="38dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_divide"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_divide"
                android:textColor="@color/deepblue"
                android:textSize="38dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_four"
                style="@style/CalculatorButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_four"
                android:textSize="38dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_five"
                style="@style/CalculatorButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_five"
                android:textSize="38dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_six"
                style="@style/CalculatorButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_six"
                android:textSize="38dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_minus"
                android:textColor="@color/deepblue"
                android:textSize="38dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_seven"
                style="@style/CalculatorButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_seven"
                android:textSize="38dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_eight"
                style="@style/CalculatorButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_eight"
                android:textSize="38dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_nine"
                style="@style/CalculatorButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_nine"
                android:textSize="38dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_plus"
                android:textColor="@color/deepblue"
                android:textSize="38dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/button_discard"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/orange"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_discard"
                android:textColor="@color/black"
                android:textSize="38dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_zero"
                style="@style/CalculatorButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_zero"
                android:textSize="38dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_dot"
                style="@style/CalculatorButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_dot"
                android:textSize="38dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_times"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/teal_700"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_times"
                android:textColor="@color/deepblue"
                android:textSize="38dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_equal"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@color/orange"
                android:gravity="center"
                android:onClick="operationFunction"
                android:text="@string/button_equal"
                android:textColor="@color/black"
                android:textSize="38dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>